# behringer-mixer

./: .gitignore  README.md  pyproject.toml
behringer_mixer/: MixerBase.py  errors.py  mappings.py  mixer_api.py  mixer_base.py  mixer_osc.py  mixer_types.py  utils.py
behringer_mixer/mixers/: mixer_type_base.py  mixer_type_wing.py  mixer_type_wing_compact.py  mixer_type_wing_rack.py  mixer_type_x32.py  mixer_type_xair.py  mixer_type_xr12.py  mixer_type_xr16.py  mixer_type_xr18.py  mixer_type_xseries_base.py  mixer_types_base.py  mixer_types_xseries_base.py
tests/: test_mapping.py  test_mixer.py  test_mixer_config.yaml  test_mixer_config.yaml.sample  test_util.py  wingmapping.json  x32mapping.json  x32mapping.txt  xr16mapping.json
