[tool.poetry]
name = "behringer_mixer"
version = "0.4.3"
description = "Module to get basic information from Behringer digital mixers eg X32/XAir etc."
authors = ["wrodie <warren@rodie.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wrodie/behringer-mixer"

[tool.poetry.dependencies]
python = "^3.10"
python-osc = "^1.8.0"
